fixed overlapping sections by using min-height

--- a/css/style.css
+++ b/css/style.css
@@ -5,28 +5,20 @@
 body {
   text-align: center;
   font-family: 'Quicksand', sans-serif;;
-  /*color: rgba(0, 0, 0, 0.87);*/
-}
-
-#about p {
-  justify-content: center;
-  text-align: center;
-  margin: 50px 200px ;
 }
 
 p {
   font-size: 18px;
+  line-height: 2;
 }
 
-.header {
-  width: 100%;
-  height: 100vh;
-  font-size: 50px;
-  line-height: 100px;
-  text-transform: uppercase;
-  font-weight: bold;
+.container {
+  padding: 5%;
+  flex-direction: row;
+  justify-content: center;
 }
 
+/* ---------Navigation Bar--------- */
 .nav {
   width: 100%;
   height: 60px;
@@ -62,51 +54,18 @@ li a {
   top: 0;
 }
 
-p {
-  line-height: 2;
-}
 
+/* ---------Sections--------- */
 section {
   justify-content: center;
   flex-align: center;
   align-items: center;
 }
 
+/* ---------Main Page--------- */
 #mainpage {
   background-color: #96C0CE;
-  height: 100vh;
-}
-
-#about {
-  background-color: #e27979;
-  height: 100vh;
-}
-
-.droplet {
-  background: skyblue;
-  border-radius: 5px 50%;
-  height: 100px;
-  margin: 150px auto;
-  transform-origin: left top;
-  transition: transform 3s;
-  width: 100px;
-}
-
-#FAQ {
-  height: 140vh;
-  background: #9dbfcc;
-}
-
-#sponsors {
-  background-color: white;
-  height: 100vh;
-}
-
-.container {
-  padding: 5%;
-  /*display: flex;*/
-  flex-direction: row;
-  justify-content: center;
+  min-height: 100vh;
 }
 
 .centerpiece {
@@ -162,24 +121,21 @@ section {
   content: "REGISTER";
 }
 
-
 .mouse_scroll {
   display: block;
   margin: 0 auto;
   width: 24px;
   height: 100px;
-  /*background: blue;*/
   margin-top: 5%;
 }
 
 
-.m_scroll_arrows
-{
+.m_scroll_arrows {
   display: block;
   width: 5px;
   height: 5px;
-  -ms-transform: rotate(45deg); /* IE 9 */
-  -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+  -ms-transform: rotate(45deg); 
+  -webkit-transform: rotate(45deg); 
   transform: rotate(45deg);
    
   border-right: 2px solid #45505B;
@@ -191,45 +147,36 @@ section {
 }
 
 
-.unu
-{
+.unu {
   margin-top: 1px;
 }
 
-.unu, .doi, .trei
-{
+.unu, .doi, .trei {
     -webkit-animation: mouse-scroll 1s infinite;
     -moz-animation: mouse-scroll 1s infinite;
 }
 
-.unu
-{
+.unu {
   -webkit-animation-delay: .1s;
   -moz-animation-delay: .1s;
   -webkit-animation-direction: alternate;
 }
 
-.doi
-{
+.doi {
   -webkit-animation-delay: .2s;
   -moz-animation-delay: .2s;
   -webkit-animation-direction: alternate;
   margin-top: -6px;
 }
 
-.trei
-{
+.trei {
   -webkit-animation-delay: .3s;
   -moz-animation-delay: .3s;
   -webkit-animation-direction: alternate;
   margin-top: -6px;
 }
 
-
-
-
-.mouse
-{
+.mouse {
 height: 42px;
 width: 24px;
   border-radius: 14px;
@@ -238,8 +185,7 @@ width: 24px;
   top: 170px;
 }
 
-.wheel
-{
+.wheel {
   height: 5px;
   width: 2px;
   display: block;
@@ -252,20 +198,15 @@ width: 24px;
   border: 2px solid #45505B;
   -webkit-border-radius: 8px;
           border-radius: 8px;
-  
-
 }
 
-.wheel
-{
+.wheel {
   -webkit-animation: mouse-wheel 0.6s linear infinite;
   -moz-animation: mouse-wheel 0.6s linear infinite;
 }
 
 
-
-@-webkit-keyframes mouse-wheel
-{
+@-webkit-keyframes mouse-wheel {
    0% {
     opacity: 1;
     -webkit-transform: translateY(0);
@@ -281,8 +222,7 @@ width: 24px;
   }
 }
 
-@-moz-keyframes mouse-wheel
-{
+@-moz-keyframes mouse-wheel {
   0% { top: 1px; }
   25% { top: 2px; }
   50% { top: 3px;}
@@ -316,7 +256,54 @@ width: 24px;
 }
 
 
-/*LOGOS*/
+
+/* ---------About--------- */
+#about {
+  background-color: #e27979;
+  min-height: 100vh;
+}
+
+p.desc {
+  padding-top: 20px;
+}
+
+.droplet {
+  background: skyblue;
+  border-radius: 5px 50%;
+  height: 100px;
+  margin: 150px auto;
+  transform-origin: left top;
+  transition: transform 3s;
+  width: 100px;
+}
+
+/* ---------FAQ--------- */
+#FAQ {
+  min-height: 140vh;
+  background: #9dbfcc;
+}
+
+.grid-container {
+  display: grid;
+  grid-row-gap: 10px;
+  grid-template-columns: auto auto auto;
+  /*padding: 5px;*/
+  justify-content: center;
+}
+.grid-item {
+  width: 100%;
+  padding: 0% 10%;
+  /*text-align: left;*/
+  /*font-size: 30px;*/
+}
+
+/* ---------Sponsors--------- */
+#sponsors {
+  background-color: white;
+  /*height: 100vh;*/
+}
+
+/* LOGOS */
 .logo {
   width: 15%;
 }
@@ -339,22 +326,9 @@ width: 24px;
 }
 
 
-.grid-container {
-  display: grid;
-  grid-row-gap: 10px;
-  grid-template-columns: auto auto auto;
-  /*padding: 5px;*/
-  justify-content: center;
-}
-.grid-item {
-  width: 100%;
-  padding: 0% 10%;
-  /*text-align: left;*/
-  /*font-size: 30px;*/
-}
-
+/* ---------Footer--------- */
 #contact {
-  height: 25vh;
+  min-height: 25vh;
   float:bottom;
   background-color: #e27979;
   justify-content: center;
@@ -380,7 +354,3 @@ small a {
   margin-top: 20px;
   padding-top: 20px;
 }
-
-
-
-
